=== HEAD

* Cache dataset returned by Dataset#un{filtered,grouped,limited,ordered} for frozen datasets (jeremyevans)

* Cache dataset returned by Dataset#reverse (no args) for frozen datasets (jeremyevans)

* Cache dataset returned by Dataset#invert for frozen datasets (jeremyevans)

* Speed up repeated calls to Dataset#count with an argument or block for frozen datasets using a cached placeholder literalizer (jeremyevans)

* Using :on_duplicate_columns=>:warn Database option with duplicate_columns_handler now prepends file/line to the warning message (jeremyevans)

* Move identifier mangling code to identifier_mangling extension, load by default unless using :identifier_mangling=>false Database option (jeremyevans)

* Allow Dataset#with_extend to accept a block and create a module with that block that the object is extended with (jeremyevans)

* Speed up repeated calls to with_pk on the same frozen model dataset using a cached placeholder literalizer (jeremyevans)

* Add dataset_module methods such as select and order that define dataset methods which support caching for frozen datasets (jeremyevans)

* Cache subset datasets if they don't use blocks or procs for frozen model datasets (jeremyevans)

* Cache intermediate dataset used in Dataset#last (no args) for frozen model datasets without an order (jeremyevans)

* Cache dataset returned by Dataset#naked for frozen datasets (jeremyevans)

* Cache intermediate dataset used in Dataset#last (no args) for frozen datasets (jeremyevans)

* Cache intermediate dataset used in Dataset#first (no args) and #single_record for frozen datasets (jeremyevans)

* Cache intermediate dataset used in Dataset#empty? for frozen datasets (jeremyevans)

* Cache intermediate dataset used in Dataset#count (no args) for frozen datasets (jeremyevans)

* Warn if :conditions option may be unexpectedly ignored during eager_graph/association_join (jeremyevans) (#1272)

* Cache SELECT and DELETE SQL for most frozen datasets (jeremyevans)
